Changed the padding on the stylesheet to hopefully fix the glitch of the images being off center when deployed to the actual live version of the site.

--- a/styles.css
+++ b/styles.css
@@ -245,7 +245,6 @@ hr {
     width: 50%;
     margin: 100px auto 100px auto;
     text-align: left;
-    padding-bottom: 20px;
 }
 
 .tmwrk {
